--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux": "^5.0.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "reselect": "^5.0.1",
     "sass": "^1.69.5",
     "styled-components": "^6.1.1",
