--- a/package.json
+++ b/package.json
@@ -1,53 +1,8 @@
 {
-  "name": "crown-clothing",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@netlify/functions": "^2.4.1",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.2.1",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.0.1",
-    "react-router-dom": "6",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.3",
-    "redux-thunk": "^3.1.0",
-    "reselect": "^5.0.1",
-    "sass": "^1.69.5",
-    "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "typescript": "^5.3.3"
   }
 }
