--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "5.1.24",
     "dotenv": "16.0.0",
     "firebase": "9.6.6",
+    "netlify-cli": "^17.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "7.2.6",
